Update hero and about copy for Lendo Scott demo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,56 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SV Code Advisory</title>
-  </head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Keith Robertson | Independent Insurance Advisor</title>
+
+  <meta
+    name="description"
+    content="Independent insurance advisor helping individuals, families, and business owners make confident decisions about life, health, and business insurance."
+  />
+
+  <!-- GEO -->
+  <meta name="geo.region" content="US-VA" />
+  <meta name="geo.placename" content="Hampton Roads, Virginia" />
+  <meta name="geo.position" content="36.8508;-76.2859" />
+  <meta name="ICBM" content="36.8508, -76.2859" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Lendo Scott | Independent Insurance Advisor" />
+ <meta
+  name="description"
+  content="Independent insurance advisor helping individuals, families, and business owners make confident decisions about life, health, and business insurance."
+ />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://YOURDOMAIN.pages.dev" />
+
+  <!-- Search Engines -->
+  <meta name="robots" content="index, follow" />
+</head>
+\
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "InsuranceAgency",
+  "name": "Lendo Scott Insurance Advisory",
+  "description": "Independent insurance advisor providing life, health, and business insurance guidance.",
+  "areaServed": {
+    "@type": "Place",
+    "name": "Hampton Roads, Virginia"
+  },
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Hampton Roads",
+    "addressRegion": "VA",
+    "addressCountry": "US"
+  },
+  "telephone": "+1-757-123-4567",
+  "url": "https://YOURDOMAIN.pages.dev"
+}
+</script>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
